--- a/lesson2/substrate-node-template/runtime/Cargo.toml
+++ b/lesson2/substrate-node-template/runtime/Cargo.toml
@@ -153,6 +153,12 @@ package = 'pallet-template'
 path = '../pallets/template'
 version = '2.0.0-rc2'
 
+[dependencies.poe]
+default-features = false
+package = 'pallet-poe'
+path = '../pallets/poe'
+version = '2.0.0-rc2'
+
 [dependencies.timestamp]
 default-features = false
 git = 'https://github.com/paritytech/substrate.git'
